--- a/FirstApp/Base.lproj/Main.storyboard
+++ b/FirstApp/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uVK-Xi-qn7">
-                                <rect key="frame" x="24" y="72" width="552" height="54"/>
+                                <rect key="frame" x="24" y="136" width="552" height="54"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="uVK-Xi-qn7" secondAttribute="height" multiplier="163:96" id="jyt-E9-qEm"/>
                                 </constraints>
@@ -38,7 +38,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JYs-w2-bjR">
-                                <rect key="frame" x="24" y="134" width="552" height="54"/>
+                                <rect key="frame" x="24" y="198" width="552" height="54"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="JYs-w2-bjR" secondAttribute="height" multiplier="163:96" id="chR-4g-kht"/>
                                 </constraints>
@@ -52,7 +52,7 @@
                                     </mask>
                                 </variation>
                                 <connections>
-                                    <segue destination="BSM-v6-hpn" kind="showDetail" identifier="showGraphingModule" id="39g-aE-flZ"/>
+                                    <segue destination="BSM-v6-hpn" kind="show" id="umY-h6-e3q"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -69,7 +69,7 @@
                             <constraint firstAttribute="trailingMargin" secondItem="uVK-Xi-qn7" secondAttribute="trailing" constant="8" id="cNU-54-Eux"/>
                             <constraint firstItem="uVK-Xi-qn7" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="djx-aq-E0c"/>
                             <constraint firstAttribute="trailingMargin" secondItem="uVK-Xi-qn7" secondAttribute="trailing" constant="8" id="hb0-XT-sjI"/>
-                            <constraint firstItem="uVK-Xi-qn7" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="iRE-yL-EQB"/>
+                            <constraint firstItem="uVK-Xi-qn7" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" multiplier="2" constant="8" id="iRE-yL-EQB"/>
                             <constraint firstItem="uVK-Xi-qn7" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="8" id="jAx-aN-fu1"/>
                             <constraint firstAttribute="centerX" secondItem="uVK-Xi-qn7" secondAttribute="centerX" constant="-0.5" id="wsf-rE-fXd"/>
                         </constraints>
@@ -336,7 +336,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="cHx-yV-nQy">
-                                <rect key="frame" x="14" y="64" width="572" height="31"/>
+                                <rect key="frame" x="14" y="128" width="572" height="31"/>
                                 <color key="tintColor" red="0.5" green="0.0" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="20" id="dns-RZ-m0c"/>
@@ -351,7 +351,7 @@
                                 </connections>
                             </slider>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pxc-tL-bDT" customClass="PushButtonView" customModule="FirstApp" customModuleProvider="target">
-                                <rect key="frame" x="250" y="112" width="100" height="100"/>
+                                <rect key="frame" x="250" y="182" width="100" height="100"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="100" id="RPD-zw-a02"/>
                                     <constraint firstAttribute="height" constant="100" id="i7N-gw-2m9"/>
@@ -369,7 +369,7 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="End-7u-sQe" customClass="GraphView" customModule="FirstApp" customModuleProvider="target">
-                                <rect key="frame" x="16" y="242" width="568" height="350"/>
+                                <rect key="frame" x="16" y="318" width="568" height="274"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="color" keyPath="backgroundStartColor">
@@ -390,14 +390,60 @@
                                 </userDefinedRuntimeAttributes>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="42D-aF-yzJ">
-                                <rect key="frame" x="16" y="20" width="568" height="36"/>
+                                <rect key="frame" x="16" y="84" width="568" height="36"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="iRI-DA-o5N"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bordered" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="WxY-PG-x83">
+                                <rect key="frame" x="358" y="282" width="218" height="29"/>
+                                <segments>
+                                    <segment title="Manual"/>
+                                    <segment title="Charts"/>
+                                </segments>
+                                <color key="tintColor" red="0.5" green="0.0" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <action selector="graphTypeSelection:" destination="BSM-v6-hpn" eventType="valueChanged" id="QbT-n1-U0t"/>
+                                </connections>
+                            </segmentedControl>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rBh-5t-BEM" customClass="GraphLineChartViewContainer" customModule="FirstApp" customModuleProvider="target">
+                                <rect key="frame" x="16" y="318" width="568" height="274"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yiM-9x-Wvl" customClass="GraphLineChartView" customModule="FirstApp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="568" height="274"/>
+                                        <color key="backgroundColor" red="0.90307257770000005" green="0.91558420439999999" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="lineColor">
+                                                <color key="value" red="0.5776079301" green="0.74947254429999999" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="backColor">
+                                                <color key="value" red="0.5" green="0.0" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="axisColor">
+                                                <color key="value" red="0.90307257770000005" green="0.91558420439999999" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="centerY" secondItem="yiM-9x-Wvl" secondAttribute="centerY" id="IIt-ZJ-4iN"/>
+                                    <constraint firstAttribute="trailing" secondItem="yiM-9x-Wvl" secondAttribute="trailing" id="PDc-Iw-Zv1"/>
+                                    <constraint firstItem="yiM-9x-Wvl" firstAttribute="width" secondItem="rBh-5t-BEM" secondAttribute="width" id="e7S-NF-YZF"/>
+                                    <constraint firstItem="yiM-9x-Wvl" firstAttribute="height" secondItem="rBh-5t-BEM" secondAttribute="height" id="jc8-ui-uJl"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="backgroundStartColor">
+                                        <color key="value" red="0.90307257770000005" green="0.91558420439999999" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="backgroundEndColor">
+                                        <color key="value" red="0.5" green="0.0" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="0.90307257770000005" green="0.91558420439999999" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
@@ -406,39 +452,52 @@
                             <constraint firstAttribute="centerX" secondItem="pxc-tL-bDT" secondAttribute="centerX" id="3sL-4i-vbQ"/>
                             <constraint firstItem="bhx-uk-gcr" firstAttribute="top" secondItem="42D-aF-yzJ" secondAttribute="bottom" constant="-17" id="8vy-bX-SSk"/>
                             <constraint firstItem="End-7u-sQe" firstAttribute="top" secondItem="pxc-tL-bDT" secondAttribute="bottom" multiplier="1.1" constant="8" symbolic="YES" id="AnM-Mh-TvG"/>
+                            <constraint firstItem="WxY-PG-x83" firstAttribute="leading" secondItem="pxc-tL-bDT" secondAttribute="trailing" constant="8" symbolic="YES" id="E0l-gd-4ht"/>
                             <constraint firstItem="pxc-tL-bDT" firstAttribute="top" secondItem="cHx-yV-nQy" secondAttribute="bottom" constant="8" id="EST-W8-fJe"/>
                             <constraint firstAttribute="centerY" secondItem="pxc-tL-bDT" secondAttribute="centerY" constant="139" id="Ics-Kc-Ctt"/>
                             <constraint firstItem="42D-aF-yzJ" firstAttribute="leading" secondItem="2O2-4G-Oca" secondAttribute="leadingMargin" id="LhL-dU-DwX"/>
+                            <constraint firstItem="WxY-PG-x83" firstAttribute="trailing" secondItem="2O2-4G-Oca" secondAttribute="trailingMargin" constant="-8" id="NPO-vN-hbt"/>
                             <constraint firstItem="CcR-0F-ccV" firstAttribute="top" secondItem="End-7u-sQe" secondAttribute="bottom" constant="8" symbolic="YES" id="P3w-bj-w5Z"/>
                             <constraint firstItem="bhx-uk-gcr" firstAttribute="top" secondItem="42D-aF-yzJ" secondAttribute="bottom" multiplier="2" constant="8" symbolic="YES" id="PBd-D4-wfW"/>
+                            <constraint firstItem="yiM-9x-Wvl" firstAttribute="top" secondItem="WxY-PG-x83" secondAttribute="bottom" constant="8" id="Rmd-UF-98n"/>
                             <constraint firstItem="cHx-yV-nQy" firstAttribute="leading" secondItem="2O2-4G-Oca" secondAttribute="leadingMargin" id="S95-Eo-nCo"/>
                             <constraint firstItem="cHx-yV-nQy" firstAttribute="top" secondItem="42D-aF-yzJ" secondAttribute="bottom" constant="8" symbolic="YES" id="TId-9Q-QSk"/>
                             <constraint firstItem="bhx-uk-gcr" firstAttribute="top" secondItem="42D-aF-yzJ" secondAttribute="bottom" constant="8" symbolic="YES" id="XLx-r1-Vpb"/>
                             <constraint firstItem="End-7u-sQe" firstAttribute="leading" secondItem="2O2-4G-Oca" secondAttribute="leadingMargin" id="aOp-b4-mc3"/>
+                            <constraint firstItem="End-7u-sQe" firstAttribute="height" secondItem="rBh-5t-BEM" secondAttribute="height" id="cM5-in-JNP"/>
                             <constraint firstAttribute="centerY" secondItem="42D-aF-yzJ" secondAttribute="centerY" id="fe6-S8-5f6"/>
+                            <constraint firstItem="End-7u-sQe" firstAttribute="centerY" secondItem="rBh-5t-BEM" secondAttribute="centerY" id="fiE-Bp-dmD"/>
                             <constraint firstAttribute="centerX" secondItem="cHx-yV-nQy" secondAttribute="centerX" id="iX4-mr-a3g"/>
                             <constraint firstItem="cHx-yV-nQy" firstAttribute="trailing" secondItem="2O2-4G-Oca" secondAttribute="trailingMargin" id="jCD-xi-Afx"/>
                             <constraint firstItem="End-7u-sQe" firstAttribute="trailing" secondItem="2O2-4G-Oca" secondAttribute="trailingMargin" id="ltn-OS-hIa"/>
+                            <constraint firstItem="42D-aF-yzJ" firstAttribute="top" secondItem="bhx-uk-gcr" secondAttribute="bottom" constant="20" id="lxQ-p5-mVI"/>
                             <constraint firstItem="pxc-tL-bDT" firstAttribute="top" secondItem="cHx-yV-nQy" secondAttribute="bottom" multiplier="1.1" constant="8" symbolic="YES" id="m3K-pu-thu"/>
+                            <constraint firstItem="End-7u-sQe" firstAttribute="centerX" secondItem="rBh-5t-BEM" secondAttribute="centerX" id="mt5-Uy-QPH"/>
                             <constraint firstItem="cHx-yV-nQy" firstAttribute="trailing" secondItem="2O2-4G-Oca" secondAttribute="trailingMargin" id="oVO-gT-Thn"/>
                             <constraint firstAttribute="trailingMargin" secondItem="42D-aF-yzJ" secondAttribute="trailing" id="vCA-D0-jFU"/>
                             <constraint firstItem="cHx-yV-nQy" firstAttribute="top" secondItem="bhx-uk-gcr" secondAttribute="bottom" constant="8" symbolic="YES" id="wjW-jR-UgU"/>
+                            <constraint firstItem="pxc-tL-bDT" firstAttribute="height" secondItem="WxY-PG-x83" secondAttribute="height" id="yTW-bi-52l"/>
+                            <constraint firstItem="End-7u-sQe" firstAttribute="width" secondItem="rBh-5t-BEM" secondAttribute="width" id="zOc-tV-Oku"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
-                                <exclude reference="fe6-S8-5f6"/>
                                 <exclude reference="8vy-bX-SSk"/>
                                 <exclude reference="PBd-D4-wfW"/>
                                 <exclude reference="XLx-r1-Vpb"/>
+                                <exclude reference="1Z5-hz-5Vu"/>
+                                <exclude reference="fe6-S8-5f6"/>
                                 <exclude reference="3h5-B2-eiE"/>
                                 <exclude reference="oVO-gT-Thn"/>
                                 <exclude reference="wjW-jR-UgU"/>
                                 <exclude reference="EST-W8-fJe"/>
                                 <exclude reference="Ics-Kc-Ctt"/>
+                                <exclude reference="yTW-bi-52l"/>
                             </mask>
                         </variation>
                     </view>
                     <connections>
+                        <outlet property="chartView" destination="yiM-9x-Wvl" id="nuf-UA-8IH"/>
+                        <outlet property="chartViewContainer" destination="rBh-5t-BEM" id="myd-q8-qwJ"/>
                         <outlet property="graphView" destination="End-7u-sQe" id="qja-Ud-QFU"/>
                         <outlet property="label" destination="42D-aF-yzJ" id="fn1-6c-g5m"/>
                         <outlet property="slider" destination="cHx-yV-nQy" id="8pC-Zk-7ZU"/>
@@ -446,7 +505,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Jh1-gf-lmA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1838" y="1850"/>
+            <point key="canvasLocation" x="1892" y="1750"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="NDU-3Z-4dw">
